# rust-bitcoind

./: .gitignore  Cargo.toml  README.md
.github/workflows/: local_test.yaml  test.yaml
src/: bitcoind.rs  config.rs  error.rs  lib.rs
