[package]
name = "bitcoind"
version = "0.1.0"
edition = "2021"
description = "A Rust library for managing Bitcoin Core nodes in Docker containers"
license = "MIT"
repository = "https://github.com/fairgateLabs/rust-bitcoind"
keywords = ["bitcoin", "docker", "bitcoind", "blockchain"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", branch = "v.0.0.2" }
bollard = "0.11.0"
futures-util = "0.3"
tokio = { version = "1.40.0", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
bitcoin = "0.32.6"
