[package]
name = "bitcoind"
version = "0.5.0"
edition = "2021"
description = "A Rust library for managing Bitcoin Core nodes in Docker containers"
license = "MIT"
repository = "https://github.com/fairgateLabs/rust-bitcoind"
keywords = ["bitcoin", "docker", "bitcoind", "blockchain"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
bollard = "0.19.4"
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", tag = "v0.5.0" }
futures-util = "0.3"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
thiserror = "2.0.12"
serde = { version = "1.0.205", features = ["derive"] }
bitcoin = "0.32.6"
redact = { version = "0.1", features = ["serde"] }

